Fourth Commit: Mobile Responsive Website

--- a/Books Inventory System/public/AddBook.html
+++ b/Books Inventory System/public/AddBook.html
@@ -4,19 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add New Book</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        h1 {
+            margin-bottom: 20px;
+        }
+        .back-button {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Add New Book</h1>
-    <form id="addBookForm">
-        <input type="text" id="title" placeholder="Title" required>
-        <input type="text" id="author" placeholder="Author" required>
-        <input type="text" id="genre" placeholder="Genre" required>
-        <input type="date" id="publication_date" required>
-        <input type="text" id="isbn" placeholder="ISBN" required>
-        <button type="submit">Add Book</button>
-    </form>
-    <button onclick="location.href='/'">Back to Inventory</button>
-    <script src="add-script.js"></script>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Book Inventory</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <button class="btn btn-primary" onclick="location.href='/'">View Inventory</button>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container mt-5">
+        <h1 class="text-center">Add New Book</h1>
+        <form id="addBookForm">
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text" id="title" class="form-control" placeholder="Title" required>
+            </div>
+            <div class="form-group">
+                <label for="author">Author</label>
+                <input type="text" id="author" class="form-control" placeholder="Author" required>
+            </div>
+            <div class="form-group">
+                <label for="genre">Genre</label>
+                <input type="text" id="genre" class="form-control" placeholder="Genre" required>
+            </div>
+            <div class="form-group">
+                <label for="publication_date">Publication Date</label>
+                <input type="date" id="publication_date" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="isbn">ISBN</label>
+                <input type="text" id="isbn" class="form-control" placeholder="ISBN" required>
+            </div>
+            <button type="submit" class="btn btn-success btn-block">Add Book</button>
+        </form>
+        <button class="btn btn-secondary btn-block back-button" onclick="location.href='/'">Back to Inventory</button>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="addbookscript.js"></script>
 </body>
 </html>
